[package]
name = "gafw"
version = "0.1.0"
edition = "2024"
authors = ["Jeff Cousino <jcousin3@gmail.com>"]
description = "Cross-platform GUI Application Framework"
keywords = ["windowing", "opengl", "egl"]
license = "Apache-2.0 or MIT"
readme = "README.md"
repository = "https://github.com/j-cousino/gafw"
documentation = "https://docs.rs/gafw"

[dependencies]
